--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
                 </p>
             </div>
             <p class="infoTxt">
-                I love learning about why things work, especially in the realms of space/physics, electronics, and computer science. I'm particularly driven to find this "why" through hands-on projects, such as the thrust-vectored model rocket I've developed over the past couple months. My main interest is in applying hardware and control software to create sustainable space vehicles and devices, and I hope to one day work on VTVL technology. Also, I'm always on the lookout for an opportunity to further pursue these interests, so feel free to reach out!
-
+                Hi! My name is Garrett and I love to explore how things work, which is why you'll often find me learning about new technology and discoveries regarding topics like space, rocketry, and AI. Particularly, I'm interested in hardware and control systems for robotics and rockets. I've even been developing my own thrust-vectored model rocket (<a href=#Projects class="link">see X-Step</a>) to deepen my knowledge in this area!
+            </p>
+            <p class="infoTxt">
+                <!-- <br>
+                <br> -->
+                Also, I'm always on the lookout for an opportunity to further pursue these interests, so feel free to reach out!
                 <!--Aside from this, you can also find me playing tennis, guitar, and cooking with family and friends.-->
             </p>
         </div>
@@ -82,10 +86,13 @@
                 Purdue University <span>2024-2028</span>
             </p>
             <p class="subSubTitle">
-                Bachelor's Degree in Electrical Engineering
+                Bachelor's Degree in Engineering
             </p>
             <p class="infoTxt">
-                Relevant Coursework: N/A
+                Activities and Societies: The Data Mine (Corporate Partners Cohort), Purdue Space Program (new member), Purdue Founders (new member), Purdue Tennis Club (new member)
+            </p>
+            <p class="infoTxt">
+                Relevant Coursework (Currently Taking): CS 159 (Tested Out), Calculus 3, The Data Mine Seminar, Introduction to Entrepreneurship
             </p>
         </div>
         <div class="infoSec">
@@ -96,7 +103,10 @@
                 High School Diploma
             </p>
             <p class="infoTxt">
-                Relevant Coursework: AP Physics C, AP Calculus BC, AP Physics 1, AP CSA (self-studied), AP Research, AP Literature and Composition, AP Language and Composition
+                GPA: 3.9/4.0
+            </p>
+            <p class="infoTxt">
+                Relevant Coursework: AP Physics C (5), AP Calculus BC (5), AP Physics 1 (5), AP CSA (self-studied) (5), AP Research (5)
             </p>
             <!-- <p class="infoTxt">  REMOVED THIS BECAUSE IT'S PROBABLY GOOD TO INCLUDE LESS HIGH SCHOOL STUFF
                 Activities and Societies: Physics and Engineering Club (Co-President), Coding Club (Co-President), National Science Honor Society (Board member), National English Honor Society (Board Member), National Honor Society, World Language Honor Society, Tennis Team (Captain)
@@ -106,7 +116,18 @@
     <section id="Experience">
         <div class="titles">
             <p>
-                Work Experience
+                Experience
+            </p>
+        </div>
+        <div class="infoSec">
+            <p class="subTitle">
+                The Data Mine, Purdue University <span>August 2023 - May 2024</span>
+            </p>
+            <p class="subSubTitle">
+                Undergraduate Data Science Researcher (Corporate Partners)
+            </p>
+            <p class="infoTxt">
+                Working in a diverse team to collaborate with <a href="https://www.viasat.com/" class="link" target="blank">Viasat</a> and determine a sustainable carrying capacity for space.
             </p>
         </div>
         <div class="infoSec">
@@ -119,16 +140,21 @@
             <p class="infoTxt">
                 Coached all ages and skill levels; managed matches, maintained courts; motivated students through action oriented teaching.
             </p>
+            <div class="pSkills">
+                <p>
+                    Leadership
+                </p>
+            </div>
         </div>
         <div class="infoSec">
             <p class="subTitle">
-                Drane Engineering <span>May 2023-January 2024</span>
+                Drane Engineering <span>May 2023 - January 2024</span>
             </p>
             <p class="subSubTitle">
                 Intern/Volunteer
             </p>
             <p class="infoTxt">
-                Collaborated with a diverse team to develop an assistive robotic arm for those with neurodegenerative diseases (emphasis on ALS); researched eye-tracking and assistive device technology; designed documentation website mock-ups; <a href="https://github.com/Garrett-R16/DE-GUI" target="_blank" class="link">Developed a rudimentary GUI to interact with the device</a> using Python, PyQt, and OpenCV
+                Collaborated with a diverse team to develop an assistive robotic arm for those with neurodegenerative diseases (emphasis on ALS); researched eye-tracking and assistive device technology; designed documentation website mock-ups; <a href="https://github.com/Garrett-R16/DE-GUI" target="_blank" class="link">developed a rudimentary GUI to interact with the device</a> using Python, PyQt, and OpenCV.
             </p>
             <p class="infoTxt">
                 <a href="https://www.draneengineering.com/s-projects-side-by-side" class="link" target="_blank">See Project Website</a>
@@ -165,7 +191,7 @@
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Characterized the material and mechanical properties of vPP-GF and rPP-GF filaments to explore a potential ocean plastic treatment; performed tests at UMASS Lowell; <a href="" target="_blank" class="link">wrote a 5000+ word academic paper</a> using LaTeX; generated detailed figures using Matplotlib; <a href="" target="_blank" class="link">presented and defended my research</a>
+                        Characterized the material and mechanical properties of vPP-GF and rPP-GF filaments to explore a potential ocean plastic treatment; worked with faculty at UMASS Lowell to perform sample testing; <a href="" target="_blank" class="link">wrote a 5000+ word academic paper</a> using LaTeX; generated detailed figures using Python/Matplotlib; <a href="" target="_blank" class="link">presented and defended my research.</a>
                     </p>
                 </div>
                 <div class="pSkills">
@@ -182,6 +208,9 @@
                         Materials Science
                     </p>
                     <p>
+                        Python
+                    </p>
+                    <p>
                         Matplotlib
                     </p>
                     <p>
@@ -192,11 +221,11 @@
             </div>
             <div class="infoSec">
                 <p class="subTitle">
-                    <a href="https://github.com/Garrett-R16/X-Step" target="_blank">X-step</a>
+                    <a href="https://github.com/Garrett-R16/X-Step" target="_blank">X-Step</a>
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Designed X-step, a model rocket which implements thrust-vector control: Designed and routed a EVA - a 4-layer PCB for thrust vector control; Created flight software using a state-system approach; Developed and simulated a direct quaternion PID controller for "powered flight"
+                        Designed X-Step, a thrust-vectored model rocket: created the EVA Flight Computer, a 4-layer PCB which directly implements sensors, servo outputs, and a microcontoller onto a single device; utilized a state-system approach for flight software; developed and simulated a direct quaternion PID controller to control rocket attitude.
                     </p>
                 </div>
                 <div class="pSkills">
@@ -235,7 +264,7 @@
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Created a gimbaled 3D-printed TVC mount capable of actuating +/-6 degrees and holding up to 29mm motors; prototyped protoboard flight computer; created test mount and <a href="https://www.youtube.com/watch?v=WfjEVA648XQ" class="link" target="_blank">performed static-fire tests</a>
+                        Designed a 3D-printed gimbaled TVC mount for 24 - 29mm motors capable of actuating &#177;6 degrees in X and Y; created protoboard flight computer; developed a test mount and <a href="https://www.youtube.com/watch?v=WfjEVA648XQ" class="link" target="_blank">performed static-fire tests.</a>
                     </p>
                 </div>
                 <div class="pSkills">
@@ -255,11 +284,11 @@
             </div>
             <div class="infoSec">
                 <p class="subTitle">
-                    <a href="https://github.com/Garrett-R16/Tab-Subgroups-Extension" target="_blank">Nested Subgroups Google Extension</a>
+                    <a href="https://github.com/Garrett-R16/Tab-Subgroups-Extension" target="_blank">Nested Subgroups Extension</a>
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Developed a google extension to extend the capabilities of Google Chrome tabGroups by allowing users to nest groups (i.e., subgroups, sub-subgroups, and so on); <a href="https://chromewebstore.google.com/detail/moregroups-subgroup-your/djbmocfpfgbhcglagcibhagfnehcbkfc" class="link" target="_blank">published it to the Chrome Web Store</a>
+                        Developed a Google extension to extend the capabilities of tabGroups by allowing users to nest groups (i.e., subgroups, sub-subgroups, and so on); <a href="https://chromewebstore.google.com/detail/moregroups-subgroup-your/djbmocfpfgbhcglagcibhagfnehcbkfc" class="link" target="_blank">published it to the Chrome Web Store.</a>
                     </p>
                 </div>
                 <div class="pSkills">
@@ -279,11 +308,11 @@
             </div>
             <div class="infoSec">
                 <p class="subTitle">
-                    <a href="https://github.com/Garrett-R16/Tab-Subgroups-Extension" target="_blank">This Website!</a>
+                    <a href="https://github.com/Garrett-R16/PortfolioV2" target="_blank">This Website!</a>
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        An interactive resume extension with a header that incorperates the Marching Squares algorithim</a>
+                        An interactive resume extension with a header that incorperates the Marching Squares algorithim.
                     </p>
                 </div>
                 <div class="pSkills">
