--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script src="backgroundAni.js"></script>
         <div id="headerInfo">
             <p id="title">Hello, I'm <span>Garrett</span></p>
-            <p id="desc"><em>an incoming freshman <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a> and an aspiring electrical engineer</em></p>
+            <p id="desc"><em>an aspiring electrical engineer <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a></em></p>
             <div id="icons">
                 <!--Git-->
                 <a href="https://github.com/Garrett-R16" target=”_blank”>
@@ -308,7 +308,7 @@
             </div>
             <div class="infoSec">
                 <p class="subTitle">
-                    <a href="https://github.com/Garrett-R16/PortfolioV2" target="_blank">This Website!</a>
+                    <a href="https://github.com/Garrett-R16/garrett-r16.github.io" target="_blank">This Website!</a>
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
