--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Characterized the material and mechanical properties of vPP-GF and rPP-GF filaments to explore a potential ocean plastic treatment; worked with faculty at UMASS Lowell to perform sample testing; wrote a 5000+ word academic paper using LaTeX; generated detailed figures using Python/Matplotlib; presented and defended my research.
+                        Characterized the material and mechanical properties of vPP-GF and rPP-GF filaments to explore a potential ocean plastic treatment; coordinated with faculty at UMASS Lowell to perform sample testing; wrote a 5000+ word academic paper using LaTeX; generated detailed figures using Python/Matplotlib; presented and defended my research.
                         <!--
                             <a href="" target="_blank" class="link">wrote a 5000+ word academic paper</a>
                             <a href="" target="_blank" class="link">presented and defended my research.</a>
@@ -229,7 +229,7 @@
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Designed X-Step, a thrust-vectored model rocket: created the EVA Flight Computer, a 4-layer PCB which directly implements sensors, servo outputs, and a microcontoller onto a single device; utilized a state-system approach for flight software; developed and simulated a direct quaternion PID controller to control rocket attitude.
+                        Designed X-Step, a thrust-vectored model rocket: created the EVA Flight Computer, a 4-layer PCB which directly implements sensors, servo outputs, and a microcontoller onto a single device; utilized a state-system approach for flight software; developed, simulated, and implemented a direct quaternion PID controller to control rocket attitude.
                     </p>
                 </div>
                 <div class="pSkills">
