--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script src="backgroundAni.js"></script>
         <div id="headerInfo">
             <p id="title">Hello, I'm <span>Garrett</span></p>
-            <p id="desc"><em>an aspiring electrical engineer <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a></em></p>
+            <p id="desc"><em>an engineer <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a></em></p>
             <div id="icons">
                 <!--Git-->
                 <a href="https://github.com/Garrett-R16" target=”_blank”>
@@ -83,13 +83,13 @@
         </div>
         <div class="infoSec">
             <p class="subTitle">
-                Purdue University <span>2024-2028</span>
+                Purdue Universit, West Lafayette, IN <span>2024-2028</span>
             </p>
             <p class="subSubTitle">
                 Bachelor's Degree in Engineering
             </p>
             <p class="infoTxt">
-                Activities and Societies: The Data Mine (Corporate Partners Cohort), Purdue Space Program (new member), Purdue Founders (new member), Purdue Tennis Club (new member)
+                Activities and Societies: The Data Mine (Corporate Partners Cohort), Purdue Space Program (Active Controls), The Founders Club, Boiler Kitchen
             </p>
             <p class="infoTxt">
                 Relevant Coursework (Currently Taking): CS 159 (Tested Out), Calculus 3, The Data Mine Seminar, Introduction to Entrepreneurship
@@ -138,8 +138,7 @@
                 Tennis Coach
             </p>
             <p class="infoTxt">
-                Coached all ages and skill levels; managed matches, maintained courts; motivated students through action oriented teaching.
-            </p>
+                Coached over 40 children using action-oriented teaching to place an emphasis on improvement vs. mistakes.            </p>
             <div class="pSkills">
                 <p>
                     Leadership
