--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 Chelmsford High School <span>2020-2024</span>
             </p>
             <p class="subSubTitle">
-                High School Diploma
+                Capstone School Diploma
             </p>
             <p class="infoTxt">
                 GPA: 3.9/4.0
