--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div id="projectsGrid">
             <div class="infoSec">
                 <p class="subTitle">
-                    <a href="" target="_blank">Sustainability Research</a>
+                    <a href="https://arxiv.org/abs/2409.09445" target="_blank">Sustainability Research</a>
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
