--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="infoSec">
             <p class="subTitle">
-                Purdue Universit, West Lafayette, IN <span>2024-2028</span>
+                Purdue University, West Lafayette, IN <span>2024-2028</span>
             </p>
             <p class="subSubTitle">
                 Bachelor's Degree in Engineering
