--- a/index.html
+++ b/index.html
@@ -190,11 +190,7 @@
                 </p>
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        Characterized the material and mechanical properties of vPP-GF and rPP-GF filaments to explore a potential ocean plastic treatment; coordinated with faculty at UMASS Lowell to perform sample testing; wrote a 5000+ word academic paper using LaTeX; generated detailed figures using Python/Matplotlib; presented and defended my research.
-                        <!--
-                            <a href="" target="_blank" class="link">wrote a 5000+ word academic paper</a>
-                            <a href="" target="_blank" class="link">presented and defended my research.</a>
-                        -->
+                        Characterized the material and mechanical properties of vPP-GF and rPP-GF filaments to explore a potential ocean plastic treatment; coordinated with faculty at UMASS Lowell to perform sample testing; <a href="https://arxiv.org/abs/2409.09445" target="_blank" class="link">wrote a 5000+ word academic paper using LaTeX</a>; generated detailed figures using Python/Matplotlib; <a href="https://youtu.be/1YFS3P_NLoE" target="_blank" class="link">presented and defended my research.</a>.
                     </p>
                 </div>
                 <div class="pSkills">
