--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 <body>
     <header id="header">
-        <script src="backgroundAni.js"></script>
+        <!-- <script src="backgroundAni.js"></script> -->
+        <img src="TVC_testReg.gif" alt="Description of the GIF">
         <div id="headerInfo">
             <p id="title">Hello, I'm <span>Garrett</span></p>
             <p id="desc"><em>an engineer <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a></em></p>
