--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script src="backgroundAni.js"></script>
         <div id="headerInfo">
             <p id="title">Hello, I'm <span>Garrett</span></p>
-            <p id="desc"><em>an engineer <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a></em></p>
+            <p id="desc"><em>an engineer <a id="pLink" href="https://www.purdue.edu/" target=”_blank”>@Purdue</a> who loves <a id="pLink" href="https://www.youtube.com/watch?v=WfjEVA648XQ" target=”_blank”>rockets</a> and robots</em></p>
             <div id="icons">
                 <!--Git-->
                 <a href="https://github.com/Garrett-R16" target=”_blank”>
