--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <p class="subTitle">
                     <a href="https://arxiv.org/abs/2409.09445" target="_blank">Sustainability Research</a>
                 </p>
-                <img src="thumbnail1.jpg">
+                <img src="projects/research.jpg">
                 <div class="xtraPad">
                     <p class="infoTxt">
                         a paper I authored on the potential of recycling PP from fishnet/rope and reinforcing it with glass fiber (GF) in the form of 3D printer filaments as a way to reduce/prevent ocean plastic. I also <a href="https://youtu.be/1YFS3P_NLoE" target="_blank" class="link">presented and defended my research.</a>
@@ -252,10 +252,7 @@
                         Python
                     </p>
                     <p>
-                        Matplotlib
-                    </p>
-                    <p>
-                        LaTeX
+                        3D Printing
                     </p>
                 </div>
             </div>
@@ -263,7 +260,7 @@
                 <p class="subTitle">
                     <a href="https://github.com/Garrett-R16/X-Step" target="_blank">Elevate</a>
                 </p>
-                <img src="picDiff.png">
+                <img src="projects/EVA.png">
                 <div class="xtraPad">
                     <p class="infoTxt">
                         Elevate is a thrust-vectored model rocket which leverages a 2-axis gimbal mount, <a href="https://www.youtube.com/watch?v=PTA0meSgiaA&t=1s" target="_blank" class="link">the EVA flight computer,</a> and a direct quaternion controller to stabilize itself during flight.
@@ -292,7 +289,7 @@
                         Quaternions
                     </p>
                     <p>
-                        Controller Design/Simulation
+                        Controller Design
                     </p>
                     <p>
                         Simulink
@@ -303,6 +300,7 @@
                 <p class="subTitle">
                     <a href="https://github.com/Garrett-R16/TVC_Control" target="_blank">3D Printed Thrust-Vector Mount</a>
                 </p>
+                <img src="projects/testMount.jpg">
                 <div class="xtraPad">
                     <p class="infoTxt">
                         a 3D-printed TVC gimbal mount capable of holding 24 - 29mm rocket motors and actuating &#177;6 degrees in X and Y that I performed <a href="https://www.youtube.com/watch?v=WfjEVA648XQ" class="link" target="_blank">static-fire tests</a> on using a custom test mount and protoboard flight computer.
@@ -327,6 +325,7 @@
                 <p class="subTitle">
                     <a href="https://github.com/Garrett-R16/Tab-Subgroups-Extension" target="_blank">MoreGroups</a>
                 </p>
+                <img src="projects/moreGroups.jpg">
                 <div class="xtraPad">
                     <p class="infoTxt">
                         a Google extension to extend the capabilities of tabGroups by allowing users to nest groups (i.e., subgroups, sub-subgroups, and so on) that is <a href="https://chromewebstore.google.com/detail/moregroups-subgroup-your/djbmocfpfgbhcglagcibhagfnehcbkfc" class="link" target="_blank">published to the Chrome Web Store.</a>
@@ -351,9 +350,10 @@
                 <p class="subTitle">
                     <a href="https://github.com/Garrett-R16/garrett-r16.github.io" target="_blank">This Website!</a>
                 </p>
+                <img src="projects/webImage.jpg">
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        An interactive resume extension with a header that incorperates the Marching Squares algorithim.
+                        a responsive portfolio that incorperates the Marching Squares algorithim.
                     </p>
                 </div>
                 <div class="pSkills">
@@ -501,10 +501,7 @@
         </div>
         <div class="pSkills">
             <p>
-                Fusion 360 Electronics/Eagle
-            </p>
-            <p>
-                Fusion 360
+                EDAs
             </p>
             <p>
                 PCB design
@@ -513,16 +510,31 @@
                 Schematic Design
             </p>
             <p>
-                Materials Science
+                Soldering
             </p>
             <p>
-                Simulink
+                State machines
             </p>
             <p>
                 Quaternions
             </p>
             <p>
-                PID Control
+                Controller Design
+            </p>
+            <p>
+                Monte Carlo Simulations
+            </p>
+            <p>
+                Simulink
+            </p>
+            <p>
+                3D Printing
+            </p>
+            <p>
+                Fusion 360
+            </p>
+            <p>
+                Git
             </p>
             <p>
                 C++
@@ -534,13 +546,7 @@
                 OpenCV
             </p>
             <p>
-                Matplotlib
-            </p>
-            <p>
-                LaTeX
-            </p>
-            <p>
-                Soldering
+                3D-printing
             </p>
             <p>
                 HTML/CSS
@@ -552,7 +558,16 @@
                 Java
             </p>
             <p>
+                LaTeX
+            </p>
+            <p>
+                Matplotlib
+            </p>
+            <p>
                 Figma
+            </p>
+            <p>
+                sgp4
             </p>
         </div>
     </section>
