--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <!-- <a href="" target="_blank">
                     <svg version="1.2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300"><path fill-rule="evenodd" d="m14 49c0-19.3 15.7-35 35-35h202.5c19.3 0 35 15.7 35 35v202.5c0 19.3-15.7 35-35 35h-202.5c-19.3 0-35-15.7-35-35zm108.5 139.6q11.1-5.9 17.3-16.3 6.2-10.3 7.3-23.7h-25.4q-1 12-7.9 19.3-6.6 7.3-18 7.3-13.2 0-20.5-10.5-7.2-10.6-7.2-31.7 0-20.3 7-31.4 7-11.1 20.8-11.1 11 0 17.8 7.1 6.8 7 8 19.5h25.4q-1.1-13.4-7.3-23.7-6.2-10.3-17.3-16.1-11.1-5.9-26.7-5.9-26.1 0-40.1 16.4-14 16.4-14 45.1 0 29 14.1 45.2 14.3 16.2 40.1 16.2 15.7 0 26.6-5.7zm136.6-114v-1h-24.6l-28.5 96.6h-3.6l-28.9-96.6h-25.8v1l35.7 117.5h40.1zm-217.5 156h217.7v-18h-217.7z"/>></svg>
                 </a> -->
-                <a href="https://www.youtube.com/@GarrettR-dj7vv" target=”_blank”>
+                <a href="https://www.youtube.com/@TheGarrettR" target=”_blank”>
                     <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" ><path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"/></svg>
                 </a>
                 <a href="mailto:garrettrussell111@gmail.com">
@@ -157,7 +157,7 @@
                 Undergraduate Data Science Researcher (Corporate Partners)
             </p>
             <p class="infoTxt">
-                Working with <a href="https://www.viasat.com/" class="link" target="blank">Viasat</a> under The Data Mine to determine a sustainable carrying capacity for space using techniques like Monte Carlo and Machine Learning.
+                Working with <a href="https://www.viasat.com/" class="link" target="blank">Viasat</a> under The Data Mine to determine a sustainable carrying capacity for space using techniques like <a href="https://github.com/Garrett-R16/Orbital-Monte-Carlo" class="link" target="blank">Monte Carlo</a> and Machine Learning.
             </p>
             <div class="pSkills">
                 <p>
@@ -590,7 +590,7 @@
                 <!--LinkedIn-->
                 <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50">    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"/></svg>
             </a>
-            <a href="https://www.youtube.com/@GarrettR-dj7vv" target=”_blank”>
+            <a href="https://www.youtube.com/@TheGarrettR" target=”_blank”>
                 <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" ><path d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"/></svg>
             </a>
             <!--COMMENTED OUT CV!!!-->
