updated board picture

--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                 <p class="subTitle">
                     <a href="https://github.com/Garrett-R16/X-Step" target="_blank">Elevate</a>
                 </p>
-                <img src="projects/EVA.png">
+                <!-- <img src="projects/EVA.png"> -->
+                <img src="projects/boardImage.jpg">
                 <div class="xtraPad">
                     <p class="infoTxt">
                         Elevate is a thrust-vectored model rocket which leverages a 2-axis gimbal mount, <a href="https://www.youtube.com/watch?v=PTA0meSgiaA&t=1s" target="_blank" class="link">the EVA flight computer,</a> and a direct quaternion controller to stabilize itself during flight.
